fixed scroll percentage and some styling on particles css for visible and hidden class selector within outer-div

--- a/src/components/particles/particlesEx.css
+++ b/src/components/particles/particlesEx.css
@@ -1,22 +1,31 @@
 .particles-outer-div{
-    position: absolute;
+    position: fixed;
     height: 100vh;
-    /* top: 0; */
-    /* left: 0; */
-    /* right: 0; */
-    /* bottom: 0; */
-    /* z-index: -10; */
-    /* transition-property: opacity; */
-    /* transition-duration: 1000ms; */
-    /* transition-timing-function: ease-in-out; */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -10;
+    transition-property: opacity;
+    transition-duration: 1000ms;
+    transition-timing-function: ease-in-out;
 }
+
+.particles-outer-div.visible{
+    opacity: 1;
+}
+
+.particles-outer-div.hidden{
+    opacity: 0;
+}
+
 
 #tsparticles{
     /* position: fixed; */
     inset: 0;
     top: 0;
     left: 0;
-    width: 100%;
+    /* width: 100%; */
     /* height: 100%; */
     /* background-color: rgb(208, 133, 133); */
     /* z-index: -10; */
